# spreadit-backend

./: README.md  pyproject.toml
app/: README.md  pyproject.toml
app/src/app/core/: main.py
app/src/app/schemas/: user.py
spreadit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
